﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-08-30 Michal Čihař  <michal@cihar.com>
    * libraries/common.lib.php, lang/*: Internationalise link to MySQL
      documentation when translation exists, this needs to be defined in
      language file (RFE #1547130).
    * lang/belarusian_latin-utf-8.inc.php: Fix charset information.

2006-08-29 Michal Čihař  <michal@cihar.com>
    * lang/croatian: Updated, thanks to Renato Pavicic - babalui.

2006-08-28 Michal Čihař  <michal@cihar.com>
    * config.sample.inc.php, Documentation.html: Add minimal sample
      configuration, so that lazy people won't copy
      libraries/config.default.php (RFE #1544570).

2006-08-27 Marc Delisle  <lem9@users.sourceforge.net>
    * themes/*/layout.inc.php: patch #1523543, possibility of vertical
      solid line between frames, thanks to Juergen Wind

2006-08-26 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php: bug #1544799, undefined variable on db copy
    * libraries/common.lib.php: bug #1544734, error messages link outdated,
      thanks to René Leonhardt
    * lang/norwegian: Update, thanks to Sven-Erik Andersen - sven-erik.
    * libraries/tbl_properties.inc.php: bug #1543996, wrong link for message,
      thanks to GerardW

2006-08-24 Michal Čihař  <michal@cihar.com>
    * Documentation.html, libraries/config.default.php,
      libraries/auth/signon.auth.lib.php, scripts/signon.php,
      scripts/setup.php: Add single signon authentication method (patch
      #1545366, patch #1541379, patch #1531302 and RFE #1031391).
    * libraries/auth/cookie.auth.lib.php, libraries/auth/http.auth.lib.php:
      Add support for LogoutURL.

2006-08-22 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/setup.php: bug #1536112, better fix (in case of 
      register_globals enabled), thanks to Michal
    ### 2.8.2.3 released from MAINT_2_8_2
    * scripts/setup.php: bug #1544692, version 2.8.2.3 breaks setup.php